--- a/error.html
+++ b/error.html
@@ -19,11 +19,10 @@
 <body>
     <h2 class="text-center my-5 titulo">Admin de Pacientes de Veterinaria</h2>
     <div class="container mt-5 p-5">
-        <h1>Hubo un error, esta pagina no se puede mostrar</h1>
+        <h1 class="text-center">Hubo un error, esta pagina no se puede mostrar</h1>
     </div><!--.container-->
 
     <script src="js/app.js"></script>
-    <script src="js/apv.js"></script>
 
 </body>
 
